force-app/main/default/objects/Grant_Solicitation_Contacts__c/Grant_Solicitation_Contacts__c.object-meta.xml
<CustomObject>
    <label>Grant/Solicitation Contacts</label>
    <nameField>
        <displayFormat>GSC-{00000}</displayFormat>
        <label>Grant/Solicitation Contacts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grant/Solicitation Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>