force-app/main/default/objects/Grant_Solicitation_Contacts__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Case : 00018205</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>